# mask-text

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
mask-text/: Cargo.toml
mask-text/examples/: README.md  all.rs  percentage.rs  prefix.rs  regex.rs
mask-text/src/: lib.rs  mask.rs
mask-text/src/snapshots/: cat_mask_with_percentage@[20]-[3]-[*].snap  cat_mask_with_percentage@[20]-[3]-[asterisk].snap  cat_mask_with_percentage@[80]-[20]-[*].snap  cat_mask_with_percentage@[80]-[20]-[asterisk].snap  cat_mask_with_percentage@[80]-[3]-[*].snap  cat_mask_with_percentage@[80]-[3]-[.].snap  cat_mask_with_percentage@[80]-[3]-[asterisk].snap  cat_mask_with_prefix@[200]-[*].snap  cat_mask_with_prefix@[200]-[asterisk].snap  cat_mask_with_prefix@[3]-[*].snap  cat_mask_with_prefix@[3]-[asterisk].snap  cat_mask_with_prefix@[7]-[*].snap  cat_mask_with_regex@[([a-z].*) (mask) ([a-z].*)]-[1]-[.].snap  cat_mask_with_regex@[([a-z].*) (mask) ([a-z].*)]-[2]-[*].snap  cat_mask_with_regex@[([a-z].*) (mask) ([a-z].*)]-[3]-[*].snap  cat_mask_with_regex@[([a-z].asterisk) (mask) ([a-z].asterisk)]-[1]-[.].snap  cat_mask_with_regex@[([a-z].asterisk) (mask) ([a-z].asterisk)]-[2]-[asterisk].snap  cat_mask_with_regex@[([a-z].asterisk) (mask) ([a-z].asterisk)]-[3]-[asterisk].snap
xtask/src/: main.rs
